# telemax

./: .gitignore  README.md  flake.nix  module.nix
.claude/specs/: 2026-03-24-niri-remote-design.md  2026-03-24-niri-remote-plan.md
host/: Cargo.toml
server/: Cargo.toml
server/src/: auth.rs  error.rs  lib.rs  main.rs  settings.rs  state.rs  ws.rs
server/src/audio/: mod.rs
server/src/input/: keymap.rs  mod.rs
server/src/media/: mod.rs
server/src/niri/: mod.rs
web/: package-lock.json  package.json  result  svelte.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: api.svelte.ts  api.ts  types.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/media/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/trackpad/: +page.svelte
web/src/routes/windows/: +page.svelte
