[package]
name = "niri-remote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
input-linux = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
niri-ipc = "25.11"
zbus = "5"
libpulse-binding = "2"
