[package]
name = "telemax"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
input-linux = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
niri-ipc = "25.11"
zbus = "5"
libpulse-binding = "2"
rustfft = "6"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
tower = "0.5"
sha2 = "0.10"
hex = "0.4"
